syntax = "proto3";

package spine.validation.test;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.validation.test";
option java_outer_classname = "BlizzardProto";
option java_multiple_files = true;

import "google/protobuf/any.proto";
import "spine/validation/test/weather.proto";

message Snowflake {
    int32 edges = 1 [(min).value = "3"];
    int32 vertices = 2 [(min).value = "3"];
}

message Blizzard {

    repeated Snowflake snowflake = 1 [(distinct) = true, (required) = true, (validate) = true];
}

message RainDrop {

    int32 mass_in_grams = 1 [(min) = { value: "1", exclusive: false}];
}

message Rain {

    repeated RainDrop rain_drop = 1 [
        (required) = true,
        (validate) = true,
        (if_invalid).error_msg = "Bad rain drop!"
    ];
}

message Region {

    string name = 1;
}

message MeteoStatistics {

    RainDrop average_drop = 1 [(validate) = true];

    google.protobuf.Any last_event = 2 [(validate) = true];

    repeated google.protobuf.Any predicted_event = 3 [(validate) = true];

    map<string, Region> included_regions = 4 [(required) = true];

    repeated Cloud cloud = 5 [(validate) = true];
}
