syntax = "proto3";

package spine.validation.test;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.validation.test";
option java_outer_classname = "EventsProto";
option java_multiple_files = true;

message PrefixEventRecognized {

    string id = 1;
}
