syntax = "proto3";

package spine.validation.test;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.validation.test";
option java_outer_classname = "FancyProto";
option java_multiple_files = true;

import "spine/validation/test/fancy_options.proto";
import "google/protobuf/descriptor.proto";

message Fancy {
    option (spine.validation.test.fancy_view) = true;

    FancyId id = 1;
}

message FancyId {

    string uuid = 1;
}
